feat: add formatter and teqplay configurations

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,11 @@ micronaut:
     http:
       cookie: true
       header: true
+  http:
+    services:
+      teqplay:
+        url: https://backenddev.teqplay.nl
+
+teqplay:
+  username: chowmichaelworkmail@gmail.com
+  password: yZ6zEdu%jiQFd
