feat(gitignore): add new gradle files to be excluded

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
+**/build/
+!src/**/build/
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+.gradletasknamecache
