feat(client): finish up login flow

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 micronaut:
   application:
     name: shiptracker
+  jcache:
+    enabled: false
   caches:
     teqplay:
       listen-to-evictions: true
