feat: create scheduler and port event processor WIP

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,10 @@ micronaut:
     blocking:
       virtual: true
 
+mongodb:
+  uri: mongodb://root:password@localhost:27017/teqplay
+
+
 teqplay:
   username: chowmichaelworkmail@gmail.com
   password: yZ6zEdu%jiQFd
